# v6synth-dns

./: Cargo.toml  LICENSE-MIT  README.md
config/: cloudflare.rhai  named.toml
config/default/: 0.zone  127.0.0.1.zone  localhost.zone
config/scripts/: akamai.rhai  cloudflare.rhai  fastly.rhai  github_pages.rhai  nat64.rhai
src/: forwarder.rs  main.rs  script.rs
